# picoros-espidf-component

./: .gitmodules  CMakeLists.txt  readme.md
config/ucdr/: config.h
